--- a/templates/base.html
+++ b/templates/base.html
@@ -38,8 +38,8 @@
                                   <input type="text" name="real_name" class="form-control" id="id_real_name" placeholder="真实姓名">
                                 </div>
                                 <div class="form-group">
-                                        <label for="id_phone_number">职业</label>
-                                        <input type="tel" name="phone_number" class="form-control" id="id_phone_number" placeholder="职业">
+                                        <label for="id_phone_number">手机号码</label>
+                                        <input type="tel" name="phone_number" class="form-control" id="id_phone_number" placeholder="手机号码">
                                       </div>
                                 <div class="form-group">
                                         <label for="id_education">学历</label>
@@ -51,7 +51,7 @@
                                       </div>
                                       <div class="form-group">
                                             <label for="id_profession">职业</label>
-                                            <input type="password" name="profession" class="form-control" id="id_profession" placeholder="职业">
+                                            <input type="text" name="profession" class="form-control" id="id_profession" placeholder="职业">
                                           </div>
                                 
                             </form>
