--- a/templates/problem/problem_list.html
+++ b/templates/problem/problem_list.html
@@ -7,14 +7,20 @@
 <div class="container c_Container mt-5 p-3">
         <div class="row c_Summary">
             <div class="col-4 ">
-                <img src="" class="w-100" />
+                <img src="{{ series.img.url }}" class="w-100" />
             </div>
             <div class="col ">
                 <h4>{{ series.name }}</h4>
-                <p>选课人数： &nbsp;&nbsp;&nbsp;&nbsp; 授课老师：</p>
-                <p>标签：<span class="badge c_Badge badge-warning"></span></p>
+                <p>选课人数：{{ joined_number }} &nbsp;&nbsp;&nbsp;&nbsp; 授课老师：{{ series.owner.username }}</p>
+                <p>标签：<span class="badge c_Badge badge-warning">{{ series.tag }}</span></p>
                 <p></p>
-                
+                {% if joined %}
+                <p>
+                    {% if perms.curriculum.upload_file  %}<button type="button" class="btn btn-info mr-3" type="button" data-toggle="modal" data-target="#i_NewChapterModel">添加章节</button><button type="button" class="btn btn-primary">添加习题</button> {% elif perms.curriculum.editor %} {%else %}<button type="button" class="btn btn-success mr-4" disabled >已加入学习</button>{% endif %}
+                    </p>
+                {% else %}
+                <p>{% if perms.curriculum.upload_file  %}<button type="button" class="btn btn-info mr-3" type="button" data-toggle="modal" data-target="#i_NewChapterModel">添加章节</button><button type="button" class="btn btn-primary">添加习题</button> {% elif perms.curriculum.editor %} {%else %}<a role="button" class="btn btn-success mr-3" href="{% url 'join_series' series.id %}" >加入学习</a>{% endif %}</p>
+                {% endif %}
                 
             </div>
         </div>
@@ -23,7 +29,7 @@
     <div class="container c_Container mt-3 p-3">
             <ul class="nav nav-tabs mb-4">
                     <li class="nav-item">
-                      <a class="nav-link" href="">章节列表</a>
+                      <a class="nav-link" href="{% url 'show_series' series.id %}">章节列表</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link active" >题目列表</a>
@@ -31,7 +37,7 @@
                     
                   </ul>
             <div class="alert alert-warning" role="alert" id="i_ChapterList">
-                    
+                    {{ series.introduce}}
                   </div>
                   <ul class="list-group list-group-flush">
                         {% for i in list %}
