F：标题显示课程名

--- a/templates/curriculum/show_series.html
+++ b/templates/curriculum/show_series.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block title %}首页_{% endblock %}
+{% block title %} {{ series.name }} _{% endblock %}
 
 {% block container %}
 {% include 'navbar.html' %}
