--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -13,6 +13,7 @@
                     {% if perms.curriculum.upload_file %}
                     <a class="nav-item nav-link" href="{% url 'my_series_list' %}">我发布的课程</a>
                     {% elif perms.curriculum.editor %}
+                    <a class="nav-item nav-link" href="{% url 'editor_series_list' %}">已审课程</a>
                     <a class="nav-item nav-link" href="{% url 'editor_series_list' %}">待审课程</a>
                     {% else %}
                     <a class="nav-item nav-link" href="{% url 'index' %}">首页</a>
