--- a/templates/curriculum/all_series.html
+++ b/templates/curriculum/all_series.html
@@ -21,13 +21,23 @@
                 <h4 class="mt-2 text-dark mx-4">全部课程</h4>
                 <div class="cardlist  d-flex flex-wrap c_SeriesCard">
                         {% for i in series_list %}
-                    <a class="card  c_Card" href="{% if not editor %}{% url 'show_series' i.id %}{% else %}{% url 'editor_cur_list' i.id %}{% endif %}" >
-                        <img class="card-img-top" src="{{ i.img.url }}" alt="Card image cap">
-                        <div class="card-body">
-                            <h5 class="card-title">{{ i.name }}</h5>
-                            <p class="card-text">{{ i.information }}</p>
-                        </div>
-                    </a>
+                        {% if editor %}
+                        <a class="card  c_Card" href="{% url 'editor_cur_list' i.id %}" >
+                                <div class="card-body">
+                                    <h5 class="card-title">{{ i.name }}</h5>
+                                    <p class="card-text">{{ i.information }}</p>
+                                </div>
+                            </a>
+                        {% else %}
+                        <a class="card  c_Card" href="{% url 'show_series' i.id %}" >
+                                <img class="card-img-top" src="{{ i.img.url }}" alt="Card image cap">
+                                <div class="card-body">
+                                    <h5 class="card-title">{{ i.name }}</h5>
+                                    <p class="card-text">{{ i.information }}</p>
+                                </div>
+                            </a>
+                        {% endif %}
+                    
                          {% endfor %}       
                 
                 </div>
