--- a/templates/problem/commit.html
+++ b/templates/problem/commit.html
@@ -1,11 +1,27 @@
+{% extends 'base.html' %}
+{% load static %}
+{% block title %}编写代码_{% endblock %}
 
-    <div>
-        <form action="" method="post">
-        {% csrf_token %}
-            {{ form.code }}
-            <div>
-                {{ form.lang_choice }}
-                <button type="submit">提交代码</button>
+{% block container %}
+{% include 'navbar.html' %}
+<div class="container c_Container mt-5 p-4 c_Problem w-100">
+    <form action="" method="POST" class="p-4">
+            {% csrf_token %}
+            <div class="form-group">
+                    <textarea name="code" class="form-control" id="id_code" rows="20" placeholder="编写代码"></textarea>
             </div>
-        </form>
-    </div>
+            <div class="form-group">
+                    <select name="lang_choice" class="form-control" id="id_lang_choice">
+                        <option value="C" selected>C语言</option>
+                        <option value="C++">C++语言</option>
+                    </select>
+            </div>
+            <button type="submit" class="btn btn-success">提交代码</button>
+    </form>
+    
+</div>
+
+{% include 'copyright.html' %}
+{% endblock %}
+
+
