--- a/templates/problem/compileError.html
+++ b/templates/problem/compileError.html
@@ -1,8 +1,26 @@
 
+{% extends 'base.html' %}
+{% load static %}
+{% block title %}{{ problem.name }}_{% endblock %}
 
-{% for i in list %}
-{{ i }}
-<br>
-{% endfor %}
+{% block container %}
+{% include 'navbar.html' %}
+<div class="container c_Container mt-5 p-4 w-100">
+        {% for i in list %}
+        {{ i }}
+        <br>
+        {% endfor %}
+        
+</div>
+
+{% include 'copyright.html' %}
+{% endblock %}
+
+
+
+
+
+
+
 
 
