--- a/templates/problem/problem.html
+++ b/templates/problem/problem.html
@@ -1,45 +1,53 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block title %}首页_{% endblock %}
+{% block title %}添加题目_{% endblock %}
 
 {% block container %}
 {% include 'navbar.html' %}
 <div class="container c_Container mt-5 p-3">
-        <div class="row c_Summary">
-            <div class="col-4 ">
-                <img src="{{ series.img.url }}" class="w-100" />
+        <form action="" method="post" class="p-4">
+                {% csrf_token %}
+                <h3 class="my-3 w-100 text-center">添加题目</h3>
+            <div class="form-group">
+                    <label for="id_name">题目名字：</label>
+                    <input type="text" name="name" required="" id="id_name" class="form-control" placeholder="题目名字">
             </div>
-            <div class="col ">
-                <h4>{{ series.name }}</h4>
-                <p>选课人数：{{ joined_number }} &nbsp;&nbsp;&nbsp;&nbsp; 授课老师：{{ series.owner.username }}</p>
-                <p>标签：<span class="badge c_Badge badge-warning">{{ series.tag }}</span></p>
-                <p></p>
-                
-                
+            <div class="form-group">
+                    <label for="id_tag">题目类型:</label>
+                    <input type="text" name="tag" required="" id="id_tag" class="form-control" placeholder="题目类型">
             </div>
-        </div>
-    </div>
+            <div class="form-group">
+                    <label for="id_description">题目描述:</label>
+                    <textarea name="description" required="" id="id_description" class="form-control" rows="5" placeholder="题目描述"></textarea>
+            </div>
+            <div class="form-group">
+                    <label for="id_input_description">输入描述:</label>
+                    <textarea  name="input_description" required id="id_input_description" class="form-control" rows="5" placeholder="输出描述"></textarea>
+            </div>
+            <div class="form-group">
+                    <label for="id_output_description">输出描述:</label>
+                    <textarea name="output_description" required id="id_output_description" class="form-control" rows="5" placeholder="输出描述"></textarea>
+            </div>
+            <div class="form-group">
+                    <label for="id_input_sample">输入样例:</label>
+                    <textarea name="input_sample" required id="id_input_sample" class="form-control" rows="5" placeholder="输出样例"></textarea>
+            </div>
+            <div class="form-group">
+                    <label for="id_output_sample">输出样例:</label>
+                    <textarea name="output_sample" id="id_output_sample" class="form-control" rows="5" placeholder="输出样例"></textarea>
+            </div>
+            <div class="form-group">
+                    <label for="id_time">时间限制:</label>
+                    <input type="number" name="time" required="" id="id_time" class="form-control" placeholder="时间限制">
+            </div>
+            <div class="form-group">
+                    <label for="id_memory">内存限制:</label>
+                    <input type="number" name="memory" required="" id="id_memory" class="form-control" placeholder="内存限制">
+            </div>
+                
+                <button type="submit" class="btn btn-success my-4">增加</button>
+        </form>  
+</div>
 
-    <div class="container c_Container mt-3 p-3">
-            <ul class="nav nav-tabs mb-4">
-                    <li class="nav-item">
-                      <a class="nav-link" href="{% url 'my_series' series.id %}">章节列表</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link active >题目列表</a>
-                    </li>
-                    
-                  </ul>
-            <div class="alert alert-warning" role="alert" id="i_ChapterList">
-                    {{ series.introduce }}
-                  </div>
-                  <ul class="list-group list-group-flush">
-                        {% for i in list %}
-                        <li class="list-group-item d-flex justify-content-between align-items-center">{{ i.id }}.{{ i.name }} <a class="badge badge-success badge-pill" href="{% url 'problem_show' i.id %}">查看</a></li>
-                        {% endfor %}
-                      </ul>
-                    
-
-    </div>
 {% include 'copyright.html' %}
 {% endblock %}
