--- a/templates/curriculum/my_series_list.html
+++ b/templates/curriculum/my_series_list.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block title %}首页_{% endblock %}
+{% block title %}课程_{% endblock %}
 
 {% block container %}
 {% include 'navbar.html' %}
