F：标题样式修改

--- a/templates/problem/problem.html
+++ b/templates/problem/problem.html
@@ -7,7 +7,7 @@
 <div class="container c_Container mt-5 p-3">
         <form action="" method="post" class="p-4">
                 {% csrf_token %}
-                <h3 class="my-3 w-100 text-center">添加题目</h3>
+                <h3 class="my-3 w-100">添加题目</h3>
             <div class="form-group">
                     <label for="id_name">题目名字：</label>
                     <input type="text" name="name" required="" id="id_name" class="form-control" placeholder="题目名字">
