--- a/templates/user/info_fill.html
+++ b/templates/user/info_fill.html
@@ -6,7 +6,7 @@
 {% include 'navbar.html' %}
 <div class="container c_Container mt-5 p-3">
         <h4 class="mt-2 text-dark mx-4">个人信息</h4>
-        <form method="POST" action="/info_fill/" class="mx-4 my-5">
+        <form method="POST" action="" class="mx-4 my-5">
         {% csrf_token %}
                         <div class="form-group">
                                         <label for="id_id_card">身份证</label>
@@ -18,7 +18,7 @@
                                       </div>
                                       <div class="form-group">
                                               <label for="id_phone_number">手机号码</label>
-                                              <input type="tel" name="phone_number" class="form-control" id="id_phone_number" placeholder="手机号码">
+                                              <input type="text" name="phone_number" class="form-control" id="id_phone_number" placeholder="手机号码">
                                             </div>
                                             {% if perms.curriculum.upload_file %}
                                             <div class="form-group">
