--- a/templates/user/register.html
+++ b/templates/user/register.html
@@ -22,16 +22,16 @@
 
 <div class="form-group">
 <label for="id_username">手机号码</label>
-<input type="tel" class="form-control" id="id_username" aria-describedby="emailHelp" placeholder="输入用户名" name="username">
+<input type="tel" class="form-control" id="id_username" placeholder="输入用户名" name="username" required>
 </div>
 
 <div class="form-group">
 <label for="id_password1">密码</label>
-<input type="password" class="form-control" id="id_password1" name="password1" data-trigger="hover" data-toggle="popover" title="您的密码需满足以下条件" data-html="true" data-content="1. 不能与其他个人信息太相似 <br />2. 必须包含至少 8 个字符<br />3. 不能是常见密码<br />4. 不能全部为数字."  placeholder="输入密码">
+<input type="password" class="form-control" id="id_password1" name="password1" data-trigger="hover" data-toggle="popover" title="您的密码需满足以下条件" data-html="true" data-content="1. 不能与其他个人信息太相似 <br />2. 必须包含至少 8 个字符<br />3. 不能是常见密码<br />4. 不能全部为数字."  placeholder="输入密码" required>
 </div>
 <div class="form-group">
   <label for="id_password2">确认密码</label>
-  <input type="password" class="form-control" id="id_password2" name="password2" data-trigger="hover" data-toggle="popover" title="您的密码需满足以下条件" data-html="true" data-content="1. 不能与其他个人信息太相似 <br />2. 必须包含至少 8 个字符<br />3. 不能是常见密码<br />4. 不能全部为数字."   placeholder="确认密码">
+  <input type="password" class="form-control" id="id_password2" name="password2" data-trigger="hover" data-toggle="popover" title="您的密码需满足以下条件" data-html="true" data-content="1. 不能与其他个人信息太相似 <br />2. 必须包含至少 8 个字符<br />3. 不能是常见密码<br />4. 不能全部为数字."   placeholder="确认密码" required>
 </div>
 <button type="submit" class="btn btn-primary w-100 mt-4">注册</button>
 </form>
