--- a/templates/user/teacher_reg.html
+++ b/templates/user/teacher_reg.html
@@ -22,24 +22,24 @@
 
 <div class="form-group">
   <label for="id_username">手机号码</label>
-  <input type="tel" class="form-control" id="id_username" aria-describedby="emailHelp" placeholder="输入用户名" name="username">
+  <input type="tel" class="form-control" id="id_username" placeholder="输入用户名" name="username" required>
 </div>
 
 <div class="form-group">
   <label for="id_password1">密码</label>
-  <input type="password" class="form-control" id="id_password1" data-trigger="hover" data-toggle="popover" title="您的密码需满足以下条件" data-html="true" data-content="1. 不能与其他个人信息太相似 <br />2. 必须包含至少 8 个字符<br />3. 不能是常见密码<br />4. 不能全部为数字"  placeholder="输入密码" name="password1">
+  <input type="password" class="form-control" id="id_password1" data-trigger="hover" data-toggle="popover" title="您的密码需满足以下条件" data-html="true" data-content="1. 不能与其他个人信息太相似 <br />2. 必须包含至少 8 个字符<br />3. 不能是常见密码<br />4. 不能全部为数字"  placeholder="输入密码" name="password1" required>
 </div>
 <div class="form-group">
     <label for="id_password2">确认密码</label>
-    <input type="password" class="form-control" id="id_password2" name="password2" data-trigger="hover" data-toggle="popover" title="您的密码需满足以下条件" data-html="true" data-content="1. 不能与其他个人信息太相似 <br />2. 必须包含至少 8 个字符<br />3. 不能是常见密码<br />4. 不能全部为数字"   placeholder="确认密码">
+    <input type="password" class="form-control" id="id_password2" name="password2" data-trigger="hover" data-toggle="popover" title="您的密码需满足以下条件" data-html="true" data-content="1. 不能与其他个人信息太相似 <br />2. 必须包含至少 8 个字符<br />3. 不能是常见密码<br />4. 不能全部为数字"   placeholder="确认密码" required>
   </div>
   <div class="form-group">
     <label for="id_real_name">姓名</label>
-    <input type="text" class="form-control" id="id_real_name" name="real_name" placeholder="真实姓名">
+    <input type="text" class="form-control" id="id_real_name" name="real_name" placeholder="真实姓名" required>
   </div>
   <div class="form-group">
     <label for="id_id_card">身份证号</label>
-    <input type="password" class="form-control" id="id_id_card" name="id_card" placeholder="身份证号码">
+    <input type="password" class="form-control" id="id_id_card" name="id_card" placeholder="身份证号码" required>
   </div>
 <button type="submit" class="btn btn-primary w-100 mt-4">注册</button>
 </form>
